Version TBA

 * Added "x86 disassembly syntax" to "View" menu to allow selecting between
   Intel or AT&T notation for x86 disassembly.

 * Handle file open message used for "Open With" on macOS (#144).

Version 0.4.1 (2022-01-03)

 * Fixed font-dependent rendering glitches when control characters or other
   Unicode oddities were present in the text view.

Version 0.4.0 (2021-12-20)

 * Add data types for common text encodings (Unicode, ISO-8859) - text
   displayed or typed into the text view on the right will be decoded or
   encoded appropriately (#10).

 * Treat pasted text as text rather than a string of raw bytes.

 * Add 8-bit integer data types.

 * Don't mark new files as unsaved.

 * Store cursor position history and allow jumping backwards/forwards (#81).

 * Allow jumping to previous/next difference in data compare window (#131).

 * Collapse long ranges of identical data in data compare window (#85).

 * Added "Jump to offset in main window" to data compare window context menu.

 * Added shortcuts for comparing data (#103).

 * Add support for other encodings to strings tool (#106).

 * Add write protect flag to prevent accidental changes to file data during
   analysis (#130).

 * Respect system cursor blink speed setting (#112).

Version 0.3.92 (2021-08-24)

 * Reduce persistent memory usage (#52).

 * Fully undo virtual mapping changes in one step (#126).

 * Fix build dependency errors (#129).

 * Add "Find previous" button to search dialogs (#111).

 * Fix hard-to-see colours in "Decode values" panel on some systems (#127).

 * Fix build errors on FreeBSD (#133).

 * Prevent document from jumping around when the window is resized or
   disassembly is in progress (#132).

 * Fix build errors when using wxWidgets 3.1.5 and newer.

 * Refactor selection handling to make sense in virtual section view (#125).

 * Add font face setting to "View" menu (#128).

 * Correctly track whether files have been modified since saving (#122).
