@@ -5,6 +5,8 @@ Version TBA
 
  * Handle file open message used for "Open With" on macOS (#144).
 
+ * Added --compare switch to jump straight into comparing two files (#141).
+
 Version 0.4.1 (2022-01-03)
 
  * Fixed font-dependent rendering glitches when control characters or other
